name:                prettybraces
version:             0.1.0.0
synopsis:            prettybraces Project...
homepage:            http://github.com/sordina/prettybraces
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable prettybraces
  main-is:             Main.hs
  build-depends:       base -any, megaparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
